<resources>
    <string name="app_name">courseWorkSlomov</string>
    <string name="hospital_reception">Регистратура больницы</string>
    <string name="guarantee_text">Гарантия качества, начиная с записи на прием.</string>
    <string name="care_text">C заботой о вас, ваша больница!</string>
    <string name="select_login_method">Выберите метод входа</string>
    <string name="patient">Пациент</string>
    <string name="employee">отрудник</string>
    <string name="magazine_text">Журнал со всеми записями</string>
    <string name="open">Открыть</string>
    <string name="confirm_entry">Потвердить запись</string>
    <string name="enter_id_text">Введите Id</string>
    <string name="approve_reject_text">Потвердить / Отклонить</string>
    <string name="refresh">Обновить</string>
    <string name="back">Назад</string>
    <string name="registry">Регистратура</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="main_text_employee">Войдите в аккаунт в сотрудника, чтобы получить права доступа.</string>
    <string name="main2_text_employee">Процесс простой и займет всего несколько минут.</string>
    <string name="to_come_in">Войти</string>
    <string name="to_create">Создать</string>
    <string name="doctors_appointment_text">Запись к врачу всего за 3 клика!</string>
    <string name="main_text_patient">Для того чтобы начать использовать наш сервис, вам нужно зарегистрироваться.</string>
    <string name="main2_text_patient">Процесс простой и займет всего несколько минут</string>
    <string name="medical_history_text">Сбор анамнеза пациента</string>
    <string name="full_name">ФИО</string>
    <string name="age">Возраст</string>
    <string name="location">Место жительства</string>
    <string name="diseases_text">Перенесенные заболевания, травмы</string>
    <string name="allergy_text">Наличие аллергических реакций</string>
    <string name="bad_habits">Вредные привычки</string>
    <string name="recording_text">Записаться к врачу</string>
    <string name="select_specialist">Выберите специалиста</string>
    <string name="selecct_date_time">Выберите дату и время</string>
    <string name="patient_complaints">Жалобы пациента</string>
    <string name="appointment_confirmed">Запись потверждена? Да / Нет</string>
    <string name="add_a_note">Добавить запись</string>
    <string name="new_employee_registration">Регистрация нового сотрудника</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="add">Добавить</string>
    <string name="new_patient_registration">Регистрация нового пациента</string>
    <string name="entrance">Вход</string>
    <string name="employee_account">Аккаунт сотрудника</string>
    <string name="patient_account">Аккаунт пациента</string>
</resources>