<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginHorizontal="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:textStyle="bold"
        android:textSize="32sp"
        android:text="@string/hospital_reception"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:textSize="15sp"
        android:textColor="@color/dark_grey"
        android:gravity="center"
        android:text="@string/guarantee_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:textSize="15sp"
        android:textColor="@color/dark_grey"
        android:gravity="center"
        android:text="@string/care_text"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/sign"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/select_login_method"/>

    <Button
        android:id="@+id/buttonPatient"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="30dp"
        android:backgroundTint="@color/red"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:text="@string/patient"/>

    <Button
        android:id="@+id/buttonEmployee"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:backgroundTint="@color/main_blue"
        android:layout_height="60dp"
        android:textSize="17sp"
        android:text="@string/employee"/>


</LinearLayout>