<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginHorizontal="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="23sp"
        android:text="@string/magazine_text" />

    <Button
        android:id="@+id/button_open"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:backgroundTint="@color/main_blue"
        android:textColor="@color/white"
        android:text="@string/open" />

    <ListView
        android:id="@+id/patientListView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_entry"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:src="@drawable/check" />

    </LinearLayout>

    <EditText
        android:id="@+id/editTextId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_id_text" />

    <EditText
        android:id="@+id/editTextReception"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/approve_reject_text" />

    <Button
        android:id="@+id/button_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="50dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:backgroundTint="@color/black"
        android:text="@string/refresh" />

    <Button
        android:id="@+id/backBackEM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:text="@string/back"
        android:layout_alignParentBottom="true"
        android:textColor="@color/black" />

</LinearLayout>
