<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPatientActivity">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="42sp"
            android:text="@string/registry"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textSize="17dp"
            android:textColor="@color/mini_text"
            android:text="@string/employee"/>

        <ImageView
            android:id="@+id/mainImg"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/medical_history" />

    </LinearLayout>

    <androidx.cardview.widget.CardView

        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="50dp"
        android:layout_below="@+id/mainLayout"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/main_blue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="32sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/mini_text"
                android:textSize="15sp"
                android:text="@string/main_text_employee"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/mini_text"
                android:textSize="15sp"
                android:text="@string/main2_text_employee"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSignInEmployee"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:backgroundTint="@color/black"
                    android:layout_marginEnd="20dp"
                    android:text="@string/to_come_in"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSignUpEmployee"
                    android:layout_width="150dp"
                    android:layout_height="70dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/to_create"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonBackEmployee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_view"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/back"
        android:textSize="18sp"
        android:backgroundTint="@color/transparent"
        android:textColor="@color/black" />

</RelativeLayout>
